--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">YourRestaurant</string>
+    <string name="are_you_sure_delete_comment">Are you sure delete comment??</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
 </resources>
